Fixed MapPin overflow

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -89,6 +89,7 @@
   .list-cell:filled:selected:focused, .list-cell:filled:selected, .list-cell:filled:hover {
     -fx-background-color: #F2F2F2;
     -fx-background-radius: 12px;
+    -fx-text-fill: black;
   }
 
 .side-panel{
@@ -165,25 +166,10 @@
     -fx-scale-x: 0.9;
 }
 
-.pickup-request-id{
-    -fx-font-family: Roboto;
-    -fx-font-size: 10px;
-    -fx-font-style: normal;
-    -fx-align-items: center;
-    -fx-text-fill: #002153;
-}
-
 .delivery-pin:hover {
     -fx-effect: dropshadow(three-pass-box, rgba(255, 111, 66, 1), 24, 0, -4, 0);
 }
 .delivery-pin:pressed {
     -fx-scale-y: 0.9;
     -fx-scale-x: 0.9;
-}
-.delivery-request-id{
-    -fx-font-family: Roboto;
-    -fx-font-size: 10px;
-    -fx-font-style: normal;
-    -fx-align-items: center;
-    -fx-text-fill: #532800;
 }
